@@ -3,12 +3,12 @@
     <parent>
         <groupId>org.scijava</groupId>
         <artifactId>pom-scijava</artifactId>
-        <version>31.1.0</version>
+        <version>37.0.0</version>
     </parent>
 
     <groupId>org.janelia.saalfeldlab</groupId>
     <artifactId>paintera-conversion-helper</artifactId>
-    <version>0.10.3-SNAPSHOT</version>
+    <version>0.11.0-SNAPSHOT</version>
 
     <name>Paintera-Conversion-Helper</name>
     <description>Command line helper to convert datasets to be paintera friendly.</description>
@@ -35,15 +35,24 @@
         <releaseProfiles>sign,deploy-to-scijava</releaseProfiles>
         <package-name>org.janelia.saalfeldlab.conversion</package-name>
 
-        <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
-        <kotlin.version>1.7.0</kotlin.version>
+        <scijava.jvm.version>21</scijava.jvm.version>
+        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
 
-        <picocli.version>4.6.3</picocli.version>
-        <imglib2-cache.version>1.0.0-beta-13</imglib2-cache.version>
-        <imglib2.version>5.13.0</imglib2.version>
-        <imglib2-label-multisets.version>0.11.4</imglib2-label-multisets.version>
-        <n5-imglib2.version>4.3.0</n5-imglib2.version>
-        <slf4j-api.version>1.7.36</slf4j-api.version>
+        <kotlin.compiler.jvmTarget>21</kotlin.compiler.jvmTarget>
+        <kotlin.version>1.9.24</kotlin.version>
+        <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
+
+        <n5.version>3.2.0</n5.version>
+        <n5-hdf5.version>2.2.0</n5-hdf5.version>
+        <n5-google-cloud.version>4.1.0</n5-google-cloud.version>
+        <n5-aws-s3.version>4.1.2</n5-aws-s3.version>
+        <n5-zarr.version>1.3.3</n5-zarr.version>
+        <n5-imglib2.version>7.0.0</n5-imglib2.version>
+        <n5-universe.version>1.5.0</n5-universe.version>
+        <imglib2-label-multisets.version>0.13.2</imglib2-label-multisets.version>
+        <spark.version>3.5.1</spark.version>
+        <jackson.version>2.15.4</jackson.version>
+<!--        <logback.version>1.4.12</logback.version>-->
     </properties>
 
     <developers>
@@ -56,9 +65,7 @@
             <organizationUrl>https://janelia.org/</organizationUrl>
             <roles>
                 <role>founder</role>
-                <role>lead</role>
                 <role>developer</role>
-                <role>maintainer</role>
             </roles>
             <timezone>-5</timezone>
         </developer>
@@ -83,6 +90,7 @@
             <organizationUrl>https://janelia.org/</organizationUrl>
             <roles>
                 <role>developer</role>
+                <role>maintainer</role>
             </roles>
             <timezone>-5</timezone>
         </developer>
@@ -124,35 +132,34 @@
         <!--	kotlin-->
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib-jdk8</artifactId>
-            <version>1.7.0</version>
+            <artifactId>kotlin-stdlib</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.janelia.saalfeldlab</groupId>
+            <artifactId>n5-universe</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.janelia.saalfeldlab</groupId>
             <artifactId>n5-imglib2</artifactId>
-            <version>${n5-imglib2.version}</version>
         </dependency>
-
         <dependency>
             <groupId>org.janelia.saalfeldlab</groupId>
             <artifactId>label-utilities-spark</artifactId>
-            <version>0.9.4</version>
+<!--            <version>0.9.4</version>-->
+            <version>0.10.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>info.picocli</groupId>
             <artifactId>picocli</artifactId>
-            <version>${picocli.version}</version>
         </dependency>
         <dependency>
             <groupId>org.janelia.saalfeldlab</groupId>
             <artifactId>n5</artifactId>
-            <version>2.5.0</version>
         </dependency>
         <dependency>
             <groupId>net.imglib2</groupId>
             <artifactId>imglib2-label-multisets</artifactId>
-            <version>${imglib2-label-multisets.version}</version>
         </dependency>
         <dependency>
             <groupId>org.janelia.saalfeldlab</groupId>
@@ -173,9 +180,19 @@
 
         <!--    logging-->
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>${slf4j-api.version}</version>
+            <groupId>io.github.oshai</groupId>
+            <artifactId>kotlin-logging-jvm</artifactId>
+            <version>5.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <scope>test</scope>
         </dependency>
 
         <!--	test-->
@@ -196,6 +213,22 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        -Djna.library.path=/opt/homebrew/lib
+                        --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+                        --add-opens=java.base/sun.security.action=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <profiles>
         <profile>
             <id>fatWithSpark</id>
@@ -205,7 +238,6 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-shade-plugin</artifactId>
-                        <version>3.3.0</version>
                         <configuration>
                             <filters>
                                 <filter>
@@ -238,7 +270,7 @@
                                 <configuration>
                                     <transformers>
                                         <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                            <mainClass>org.janelia.saalfeldlab.paintera.conversion.PainteraConvert</mainClass>
+                                            <mainClass>org.janelia.saalfeldlab.conversion.PainteraConvert</mainClass>
                                         </transformer>
                                         <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                                             <resource>META-INF/json/org.scijava.plugin.Plugin</resource>
@@ -308,7 +340,7 @@
                                 <configuration>
                                     <transformers>
                                         <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                            <mainClass>org.janelia.saalfeldlab.paintera.conversion.PainteraConvert</mainClass>
+                                            <mainClass>org.janelia.saalfeldlab.conversion.PainteraConvert</mainClass>
                                         </transformer>
                                         <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                                             <resource>META-INF/json/org.scijava.plugin.Plugin</resource>
